[package]
name = "sky-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ringbuf = { version = "0.1.3", features = ["impl-tokio"] }
async-stream = "0.3.5"
bollard = "0.14.0"
bytes = "1.4.0"
clap = { version = "4.3.0", features = ["derive"] }
data-encoding = "2.4.0"
fs_extra = "1.3.0"
futures = "0.3.28"
futures-core = "0.3.28"
futures-util = "0.3.28"
hyper = { version = "0.14.26", features = ["full"] }
indicatif = "0.17.3"
oci-spec = "0.6.0"
reqwest = { version = "0.11.18", features = ["stream"] }
ring = { version = "0.16.20", features = ["std"] }
ringbuf = "0.3.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
tar = "0.4.38"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
zstd = "0.12.3"
